package operate

import (
	"context"

	"github.com/entrehuihui/grpa-gateway-complete2/service/myrpc/proto"
)

// User 列表
func GetUser(ctx context.Context, in *proto.GetUserReq) (*proto.GetUserResp, error) {
	return nil, nil
}

// User 添加
func PostUser(ctx context.Context, in *proto.PostUserReq) (*proto.PostUserResp, error) {
	return nil, nil
}

// User 修改
func PutUser(ctx context.Context, in *proto.PutUserReq) (*proto.PutUserResp, error) {
	return nil, nil
}
